--- a/TrafficCop/ProfileViewController.xib
+++ b/TrafficCop/ProfileViewController.xib
@@ -42,7 +42,7 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="BZP-hD-Wvh">
-                                    <rect key="frame" x="20" y="28" width="70" height="70"/>
+                                    <rect key="frame" x="114" y="43" width="65" height="65"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user.png" id="ncq-sI-u31">
@@ -71,7 +71,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user.png" id="h6I-U3-GkZ">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="email.png" id="h6I-U3-GkZ">
                                     <rect key="frame" x="59" y="240" width="24" height="24"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
@@ -98,6 +98,7 @@
     </objects>
     <resources>
         <image name="REG_box.png" width="564" height="413"/>
+        <image name="email.png" width="50" height="50"/>
         <image name="user.png" width="50" height="50"/>
     </resources>
 </document>
